Finish all sections

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,10 +1,14 @@
 // Colors
 $whiteColor: #fff;
+$whiteGrayColor: #f6f6f6;
 $blackColor: #000;
+$grayColor: #eee;
+$darkGrayColor: #7d7d7d;
 $highlightColor: #0093e5;
 $textColor: #7c7c7c;
 $titleColor: #4d4d4d;
 $borderColor1: #2cf7ec;
+$borderColor2: #3dbaff;
 
 // Fonts
 $openSansFont: "Open Sans", Arial, Tahoma, sans-serif;
