--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -13,19 +13,23 @@
 }
 
 *::-webkit-input-placeholder {
-	color: #fff;
+	color: $titleColor;
+	font-weight: normal;
 	opacity: 1;
 }
 *:-moz-placeholder {
-	color: #fff;
+	color: $titleColor;
+	font-weight: normal;
 	opacity: 1;
 }
 *::-moz-placeholder {
-	color: #fff;
+	color: $titleColor;
+	font-weight: normal;
 	opacity: 1;
 }
 *:-ms-input-placeholder {
-	color: #fff;
+	color: $titleColor;
+	font-weight: normal;
 	opacity: 1;
 }
 
@@ -943,18 +947,47 @@ a {
 			color: $highlightColor;
 		}
 	}
+
+	.slick-track {
+		display: flex;
+		align-items: center;
+	}
 }
 
-.tech-list {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
+.tech-item {
+	margin: 0 10px;
+	outline: 0;
 
+	img {
+		margin: 0 auto;
+	}
+}
 
 // ==================================================
 //  ### 11. SECTION "MAP" ###
 // ==================================================
+.sect-map {
+	position: relative;
+
+	&::before,
+	&::after {
+		content: '';
+		position: absolute;
+		left: 0;
+		z-index: 2;
+
+		width: 100%;
+		height: 8px;
+	}
+	&::before {
+		top: 0;
+		background: $highlightColor url("../img/google-map/top-line.png") no-repeat;
+	}
+	&::after {
+		bottom: 0;
+		background: $highlightColor url("../img/google-map/bottom-line.png") no-repeat;
+	}
+}
 .google-map {
 	//width: 100%;
 	height: 320px;
@@ -972,9 +1005,8 @@ a {
 // ==================================================
 .main-footer {
 	width: 100%;
-	padding-top: 50px;
 
-	background-color: $highlightColor;
+	background-color: $whiteColor;
 }
 
 .footer-contacts {
@@ -982,11 +1014,13 @@ a {
 	justify-content: space-between;
 	flex-wrap: wrap;
 
+	padding: 70px 0 45px;
+
 	&__info {
 		width: 100%;
-		max-width: 300px;
+		max-width: 380px;
 
-		color: $whiteColor;
+		color: $titleColor;
 		font-family: $openSansFont;
 	}
 
@@ -999,7 +1033,8 @@ a {
 		margin-right: 20px;
 
 		border-radius: 100%;
-		background-color: $whiteColor;
+		border: 1px solid $highlightColor;
+		background-color: transparent;
 
 		svg {
 			fill: $highlightColor;
@@ -1030,31 +1065,34 @@ a {
 	&__phones {
 		display: flex;
 		flex-wrap: wrap;
+
+		margin-bottom: 58px;
 	}
 
 	&__phone {
 		display: block;
 		font-size: 14px;
 		font-weight: 600;
-		//line-height: 43px;
 	}
 
 	&__mail {
 		display: flex;
 		align-items: center;
 
+		margin-bottom: 19px;
+
 		&-link {
-			color: $whiteColor;
+			color: $titleColor;
 			font-family: $openSansFont;
 			font-size: 14px;
 			font-weight: 600;
-			line-height: 43px;
+			line-height: 1;
 			transition: all 0.25s ease-in-out;
 
 			&:hover,
 			&:active,
 			&.active {
-				color: $titleColor;
+				color: $textColor;
 			}
 		}
 	}
@@ -1062,44 +1100,32 @@ a {
 	&__address {
 		display: flex;
 		align-items: center;
+
+		margin-bottom: 19px;
 	}
 
 	&__location {
 		font-size: 14px;
 		font-weight: 600;
-		line-height: 43px;
+		line-height: 1;
 	}
 
 	&__welcome {
-		color: #e3e2e2;
+		color: $highlightColor;
 		font-family: $juraFont;
-		font-size: 16px;
+		font-size: 24px;
 		font-weight: bold;
-		line-height: 24px;
+		line-height: 36px;
+
+		p {
+			margin: 0;
+		}
 	}
 
 	&__form {
 		width: 100%;
 		max-width: 460px;
 		overflow: hidden;
-		margin-bottom: 70px;
-	}
-
-	&__socials {
-		flex: 1 100%;
-		max-width: 100%;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
-
-	&__soc-icon {
-		display: block;
-		width: 30px;
-		height: 30px;
-		margin-right: 60px;
-
-		text-align: center;
 	}
 }
 
@@ -1114,14 +1140,15 @@ a {
 
 	&__title {
 		display: block;
-		margin: 0 0 25px;
+		margin: 0 0 30px;
 		padding: 0;
 
-		color: $whiteColor;
+		color: $highlightColor;
 		font-family: $openSansFont;
-		font-size: 20px;
+		font-size: 36px;
 		font-weight: bold;
 		line-height: 24px;
+		text-transform: uppercase;
 	}
 
 	&__control {
@@ -1154,21 +1181,17 @@ a {
 			width: 100%;
 			padding: 12px 15px;
 
-			color: $whiteColor;
+			color: $titleColor;
 			font-family: $openSansFont;
 			font-size: 14px;
-			font-weight: normal;
+			font-weight: bold;
 			line-height: 1.4;
 
-			border: 1px solid $whiteColor;
+			border: 1px solid $grayColor;
 			border-radius: 0;
 			background-color: transparent;
 			outline: 0;
 			transition: all 0.25s ease-in-out;
-			&:hover,
-			&:focus {
-				border-color: rgba($whiteColor, 0.5);
-			}
 		}
 
 		input {
@@ -1183,35 +1206,17 @@ a {
 
 		button {
 			box-sizing: border-box;
-			display: inline-block;
-			padding: 14px 25px;
 
-			color: $highlightColor;
-			font-family: Arial, Tahoma, sans-serif;
-			font-size: 14px;
-			font-weight: normal;
-			line-height: 1;
-			text-align: center;
-
-			border: 1px solid $whiteColor;
-			background-color: $whiteColor;
-			transition: all 0.25s ease-in-out;
-			cursor: pointer;
-			outline: 0;
-
-			&:hover,
-			&:active,
-			&.active {
-				color: $whiteColor;
-				background-color: transparent;
+			@include button(inline-block);
+			&::before {
+				background-color: $linearColor2;
 			}
 		}
 	}
 }
 
 .footer-copyrights {
-	margin-top: 50px;
-	padding: 15px 0;
+	padding: 11.5px 0;
 
 	color: #c3c3c3;
 	font-family: $openSansFont;
@@ -1261,18 +1266,3 @@ a {
 	}
 }
 
-
-// ==================================================
-//  ### ANIMATIONS ###
-// ==================================================
-@keyframes btn-gradient {
-	0%{
-		background-position:88% 0%;
-	}
-	50%{
-		background-position:13% 100%;
-	}
-	100%{
-		background-position:88% 0%;
-	}
-}
