Added Favicon icon, media-queries SASS mixin. Beginning adaptive layout.

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -15,3 +15,12 @@ $linearColor2: #30e5f0;
 // Fonts
 $openSansFont: "Open Sans", Arial, Tahoma, sans-serif;
 $juraFont: "Jura", Arial, Tahoma, sans-serif;
+
+
+// Breakpoints
+$mobile: 480px;
+$tablet: 768px;
+$laptop: 1024px;
+$desktop: 1200px;
+
+$grid: 960px;
