--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -16,6 +16,7 @@ $linearColor2: #30e5f0;
 // Fonts
 $openSansFont: "Open Sans", Arial, Tahoma, sans-serif;
 $juraFont: "Jura", Arial, Tahoma, sans-serif;
+$arialFont: Arial, Tahoma, sans-serif;
 
 
 // Breakpoints
