--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -65,7 +65,7 @@ a {
 	margin: 0 auto;
 	padding: 0 10px;
 
-	@include max-screen($laptop) {
+	@include max-screen($grid) {
 		padding: 0 15px;
 	}
 }
@@ -82,7 +82,7 @@ a {
 	display: flex;
 	align-items: center;
 	background-color: $whiteColor;
-	@include min-screen($tablet) {
+	@include min-screen($grid) {
 		@include vis-hid;
 	}
 
@@ -91,6 +91,7 @@ a {
 		z-index: 201;
 		flex: 1;
 		max-width: 24px;
+		height: 24px;
 		@include btn-tag;
 		&.active {
 			span {
@@ -150,11 +151,13 @@ a {
 	min-height: 71px;
 	background-color: $whiteColor;
 	box-shadow: 0 5px 5px rgba($blackColor, 0.4);
-
-	@include max-screen($mobile) {
+	@include max-screen($grid) {
 		display: flex;
 		align-items: center;
 		min-height: 47px;
+	}
+	@include screen($tablet, $grid) {
+		min-height: 55px;
 	}
 }
 
@@ -162,12 +165,15 @@ a {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-
-	@include max-screen($mobile) {
+	&.active {
+		left: 0;
+	}
+	@include max-screen($grid) {
 		position: fixed;
 		top: 0;
 		left: -100vw;
 		z-index: 200;
+		flex-direction: column;
 		justify-content: center;
 		width: 100%;
 		height: 100vh;
@@ -176,8 +182,9 @@ a {
 		background-color: $whiteColor;
 		transition: all 0.25s ease-in-out;
 	}
-	&.active {
-		left: 0;
+	@include screen($tablet, $grid) {
+		width: 50%;
+		transition: all 0.5s ease-in-out;
 	}
 
 	&__list {
@@ -186,8 +193,7 @@ a {
 		margin: 0;
 		padding: 0;
 		list-style: none;
-
-		@include max-screen($mobile) {
+		@include max-screen($grid) {
 			flex-direction: column;
 			width: 100%;
 			text-align: center;
@@ -200,11 +206,13 @@ a {
 		&:last-child {
 			margin-right: 0;
 		}
-
-		@include max-screen($mobile) {
+		@include max-screen($grid) {
 			width: 100%;
 			margin-right: 0;
 			margin-bottom: 15px;
+		}
+		@include screen($tablet, $grid) {
+			width: auto;
 		}
 	}
 
@@ -231,9 +239,8 @@ a {
 			background-color: transparent;
 			transition: all 0.25s ease-in-out;
 			transform: translateX(-100%);
-
 			@include max-screen($mobile) {
-				display: none;
+				@include vis-hid;
 			}
 		}
 		&:hover,
@@ -241,17 +248,15 @@ a {
 		&.active,
 		&.mPS2id-highlight {
 			color: $highlightColor;
-
-			@include max-screen($mobile) {
-				color: $whiteColor;
-				background-color: $highlightColor;
-			}
 			&::after {
 				background-color: $highlightColor;
 				transform: translateX(0);
 			}
+			@include max-screen($mobile) {
+				color: $whiteColor;
+				background-color: $highlightColor;
+			}
 		}
-
 		@include max-screen($mobile) {
 			width: 100%;
 			padding: 15px 0;
@@ -262,16 +267,11 @@ a {
 		display: block;
 		width: 100%;
 		max-width: 94px;
-
-		@include max-screen($mobile) {
+		@include max-screen($grid) {
 			order: -1;
 			max-width: 150px;
 			margin-bottom: 50px;
 		}
-	}
-
-	@include max-screen($mobile) {
-		flex-direction: column;
 	}
 }
 
@@ -279,26 +279,25 @@ a {
 // *** 2. SECTION "HERO" ***
 // =========================
 .sect-hero {
-	height: 100vh;
-	padding: 71px 0 380px;
+	//height: 100vh;
+	margin-top: 71px;
+	padding: 175px 0 380px;
 	background: $blackColor url("../img/backgrounds/hero_bg.jpg") no-repeat center;
 	background-size: cover;
-
-	@include max-screen($mobile) {
-		height: auto;
-		margin-top: 47px;
-		padding: 85px 0 50px;
+	@include max-screen($grid) {
 		background: $blackColor url("../img/backgrounds/mobile/hero_bg.jpg") no-repeat center;
 		background-size: cover;
 	}
-
-	&__content {
-		margin-top: 175px;
-
-		@include max-screen($mobile) {
-			margin-top: 0;
-		}
+	@include max-screen($mobile) {
+		margin-top: 47px;
+		padding: 85px 0 50px;
 	}
+	@include screen($tablet, $grid) {
+		margin-top: 55px;
+		padding: 175px 0;
+	}
+
+	&__content {  }
 
 	&__descr {
 		margin-bottom: 25px;
@@ -307,12 +306,13 @@ a {
 		font-size: 22px;
 		font-weight: normal;
 		line-height: 32px;
-
+		@include max-screen($grid) {
+			text-align: center;
+		}
 		@include max-screen($mobile) {
 			margin-bottom: 60px;
 			font-size: 18px;
 			line-height: 24px;
-			text-align: center;
 		}
 
 		p {
@@ -324,8 +324,7 @@ a {
 		position: relative;
 		display: flex;
 		align-items: center;
-
-		@include max-screen($mobile) {
+		@include max-screen($grid) {
 			flex-direction: column;
 		}
 	}
@@ -343,9 +342,11 @@ a {
 		font-weight: bold;
 		line-height: 17px;
 		text-transform: uppercase;
-
-		@include max-screen($mobile) {
+		@include max-screen($grid) {
 			order: -1;
+			margin: 15px 0;
+		}
+		@include max-screen($mobile) {
 			margin: 7px 0 15px;
 			font-size: 9px;
 			line-height: 17px;
@@ -355,8 +356,7 @@ a {
 	&__phones {
 		display: flex;
 		flex-direction: column;
-
-		@include max-screen($mobile) {
+		@include max-screen($grid) {
 			order: -2;
 		}
 	}
@@ -370,7 +370,6 @@ a {
 		line-height: 35px;
 		letter-spacing: 0.05em;
 		text-transform: uppercase;
-
 		@include max-screen($mobile) {
 			font-size: 18px;
 			line-height: 30px;
@@ -381,9 +380,12 @@ a {
 		position: absolute;
 		top: 65px;
 		left: -135px;
-
 		@include max-screen($mobile) {
 			@include vis-hid;
+		}
+		@include screen($tablet, $grid) {
+			top: 170px;
+			left: 140px;
 		}
 
 		&-img {
@@ -402,6 +404,9 @@ a {
 			font-weight: bold;
 			line-height: 1;
 			text-transform: uppercase;
+			@include max-screen($grid) {
+				color: $whiteColor;
+			}
 
 			&--1 {
 				transform: rotate(-10deg);
@@ -748,6 +753,9 @@ a {
 	display: none;
 	&.active {
 		display: block;
+		img {
+			animation: scale 0.5s ease-in-out;
+		}
 	}
 }
 
@@ -778,7 +786,7 @@ a {
 		width: 1px;
 		height: 100%;
 		background-color: $highlightColor;
-		@include min-screen($laptop) {
+		@include min-screen($grid) {
 			@include vis-hid;
 		}
 	}
@@ -965,24 +973,6 @@ a {
 	}
 }
 
-.m-sect-portfolio__title {
-	margin: 0;
-	color: $titleColor;
-	font-family: $openSansFont;
-	font-size: 24px;
-	font-weight: bold;
-	line-height: 32px;
-	text-align: center;
-	@include min-screen($laptop) {
-		@include vis-hid;
-	}
-
-	span {
-		display: block;
-		color: $highlightColor;
-	}
-}
-
 .portfolio-slider {
 	position: relative;
 	margin-top: 180px;
@@ -1098,6 +1088,78 @@ a {
 		&--iphone {
 			right: 27%;
 			bottom: 0;
+		}
+	}
+}
+
+// Mobile version
+.m-sect-portfolio__title {
+	margin: 0 0 20px;
+	color: $titleColor;
+	font-family: $openSansFont;
+	font-size: 24px;
+	font-weight: bold;
+	line-height: 32px;
+	text-align: center;
+	@include min-screen($grid) {
+		@include vis-hid;
+	}
+
+	span {
+		display: block;
+		color: $highlightColor;
+	}
+}
+
+.m-portfolio-slider {
+	@include min-screen($grid) {
+		@include vis-hid;
+	}
+	.slick-dots {
+		bottom: -30px;
+		li {
+			display: inline-flex;
+			justify-content: center;
+			align-items: center;
+			width: 15px;
+			height: 15px;
+			margin: 0 9px;
+			button {
+				height: 11px;
+				width: 11px;
+				border-radius: 100%;
+				background-color: #d1d1d1;
+				&::before {
+					@include vis-hid;
+				}
+			}
+			&.slick-active {
+				button {
+					width: 15px;
+					height: 15px;
+					background-color: #0093e5;
+				}
+			}
+		}
+	}
+}
+
+.m-portfolio-slide {
+	&__title {
+		margin-bottom: 15px;
+		color: #6b6b6b;
+		font-family: $openSansFont;
+		font-size: 16px;
+		font-weight: bold;
+		line-height: 1;
+		text-transform: uppercase;
+		text-decoration: underline;
+		text-align: center;
+	}
+
+	&__img {
+		img {
+			margin: 0 auto;
 		}
 	}
 }
@@ -1368,7 +1430,7 @@ a {
 		//}
 
 		small {
-			font-size: 20px;
+			font-size: 16px;
 			line-height: 29px;
 			//@include max-screen($mobile) {
 			//	margin-left: 10px;
@@ -1484,7 +1546,7 @@ a {
 	z-index: 2;
 	display: inline-flex;
 	justify-content: center;
-	align-content: center;
+	align-items: center;
 	width: 36px;
 	height: 36px;
 	border-radius: 100%;
@@ -1497,9 +1559,12 @@ a {
 		width: 6px;
 		height: 2px;
 		background-color: $highlightColor;
-		transform: rotate(45deg);
+		&:first-child {
+			margin-right: -1.5px;
+			transform: rotate(45deg);
+		}
 		&:last-child {
-			margin-left: -2px;
+			margin-left: -1.5px;
 			transform: rotate(-45deg);
 		}
 	}
@@ -1507,7 +1572,7 @@ a {
 
 // Mobile version
 .m-pricing-grid {
-	@include min-screen($laptop) {
+	@include min-screen($grid) {
 		@include vis-hid;
 	}
 }
@@ -1521,8 +1586,9 @@ a {
 	padding: 25px 0 50px;
 	color: $whiteColor;
 	text-align: center;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
+	border-radius: 5px;
+	//border-top-left-radius: 5px;
+	//border-top-right-radius: 5px;
 	background-color: $highlightColor;
 	outline: 0;
 	&::after {
@@ -1544,6 +1610,7 @@ a {
 	}
 	&.ui-state-active {
 		padding: 25px 0 0;
+		box-shadow: 0 9px 24px 0 rgba($blackColor, 0.25);
 		&::after {
 			@include vis-hid;
 		}
@@ -1581,9 +1648,10 @@ a {
 	}
 
 	&__order {
-		display: block;
-		width: 100%;
 		padding: 30px 0;
+		text-align: center;
+		border-bottom-left-radius: 5px;
+		border-bottom-right-radius: 5px;
 		background-color: $highlightColor;
 
 		a {
@@ -1610,21 +1678,8 @@ a {
 	}
 
 	&__content {
-		position: relative;
-		padding-bottom: 50px;
-
-		&::after {
-			content: '';
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			display: block;
-			width: 100%;
-			height: 50px;
-			border-bottom-left-radius: 5px;
-			border-bottom-right-radius: 5px;
-			background-color: $highlightColor;
-			transition: all 0.25s ease-in-out;
+		&.ui-accordion-content-active {
+			box-shadow: 0 9px 24px 0 rgba($blackColor, 0.25);
 		}
 	}
 
@@ -1722,7 +1777,7 @@ a {
 	line-height: 32px;
 	text-align: center;
 	text-transform: uppercase;
-	@include min-screen($laptop) {
+	@include min-screen($grid) {
 		@include vis-hid;
 	}
 
@@ -1758,11 +1813,11 @@ a {
 	}
 	&::before {
 		top: 0;
-		background: $highlightColor url("../img/google-map/top-line.png") no-repeat;
+		background: $highlightColor url("../img/google-map/top-line.png") repeat-x;
 	}
 	&::after {
 		bottom: 0;
-		background: $highlightColor url("../img/google-map/bottom-line.png") no-repeat;
+		background: $highlightColor url("../img/google-map/bottom-line.png") repeat-x;
 	}
 }
 .google-map {
@@ -1947,6 +2002,7 @@ a {
 	&__form {
 		width: 100%;
 		max-width: 460px;
+		margin: 0 auto;
 		overflow: hidden;
 	}
 }
@@ -1992,15 +2048,23 @@ a {
 			}
 		}
 
+		&--phone {
+			max-width: 100%;
+			margin: 30px 0;
+		}
+
 		&--textarea {
 			display: block;
 			width: 100%;
 			max-width: 100%;
-			margin-top: 20px;
 			@include max-screen($mobile) {
 				margin-top: 0;
 				margin-bottom: 0;
 			}
+		}
+
+		&--hidden {
+			@include vis-hid;
 		}
 
 		&--button {
@@ -2043,11 +2107,11 @@ a {
 
 		label.error {
 			position: absolute;
-			top: -35px;
+			top: -25px;
 			color: red;
 			font-family: $openSansFont;
 			font-size: 12px;
-			line-height: 1.4;
+			line-height: 1;
 		}
 
 		textarea {
@@ -2060,9 +2124,10 @@ a {
 		}
 
 		button {
-			box-sizing: border-box;
-
 			@include button(inline-block);
+			box-sizing: border-box;
+			box-shadow: 4px 4px 15px 0 rgba($blackColor, 0.15);
+
 			&::before {
 				background-color: $linearColor2;
 			}
@@ -2130,44 +2195,49 @@ a {
 
 // *** PAGE BOTTOM LINK ***
 // ========================
-.page-bottom-link {
+.portfolio-link {
 	position: fixed;
-	bottom: 0;
-	left: 50%;
+	top: 50%;
+	right: -81px;
 	z-index: 99;
 	display: block;
-	padding: 10px 50px;
-	color: $whiteColor;
-	//font-family: $juraFont;
-	font-size: 16px;
-	font-weight: 600;
-	letter-spacing: 0.05em;
-	text-transform: uppercase;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
-	background-color: $highlightColor;
-	box-shadow: 0 -5px 20px rgba($blackColor, 0.6);
-	transform: translateX(-50%);
-	transition: all 0.25s ease-in-out;
-	@include max-screen($mobile) {
-		padding: 10px 40px;
-		font-size: 14px;
-	}
-
+	height: 44px;
+	transform: rotate(270deg);
+	transition: all 0.5s;
 	&:hover,
 	&:active,
 	&.active {
-		box-shadow: 0 -1px 10px rgba($blackColor, 0.6);
+		right: -69px;
+	}
+	//@include max-screen($mobile) {
+	//	right: -69px;
+	//}
+
+	svg {
+		width: 180.9px;
+		height: 44px;
+		path {
+			fill: $borderColor2;
+		}
 	}
 
-	&.hidden {
-		@include vis-hid;
+	span {
+		position: absolute;
+		top: 10px;
+		left: 50%;
+		font-family: $juraFont;
+		color: $whiteColor;
+		font-size: 18px;
+		font-weight: 600;
+		line-height: 1;
+		text-transform: uppercase;
+		transform: translateX(-50%);
 	}
 }
 
 
 // *** TOTOP ***
-// ========================
+// =============
 .to-top {
 	@include btn-tag;
 	position: fixed;
@@ -2213,5 +2283,16 @@ a {
 		span {
 			background-color: $highlightColor;
 		}
+	}
+}
+
+// *** ANIMATIONS ***
+// ==================
+@keyframes scale {
+	from {
+		transform: scale(0);
+	}
+	to {
+		transform: scale(1);
 	}
 }
