--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -65,7 +65,7 @@ a {
 	margin: 0 auto;
 	padding: 0 10px;
 
-	@include max-screen($grid) {
+	@include max-screen($tablet-max) {
 		padding: 0 15px;
 	}
 }
@@ -151,12 +151,12 @@ a {
 	min-height: 71px;
 	background-color: $whiteColor;
 	box-shadow: 0 5px 5px rgba($blackColor, 0.4);
-	@include max-screen($grid) {
+	@include max-screen($tablet-max) {
 		display: flex;
 		align-items: center;
 		min-height: 47px;
 	}
-	@include screen($tablet, $grid) {
+	@include screen($tablet, $tablet-max) {
 		min-height: 55px;
 	}
 }
@@ -168,7 +168,7 @@ a {
 	&.active {
 		left: 0;
 	}
-	@include max-screen($grid) {
+	@include max-screen($tablet-max) {
 		position: fixed;
 		top: 0;
 		left: -100vw;
@@ -182,7 +182,7 @@ a {
 		background-color: $whiteColor;
 		transition: all 0.25s ease-in-out;
 	}
-	@include screen($tablet, $grid) {
+	@include screen($tablet, $tablet-max) {
 		width: 50%;
 		transition: all 0.5s ease-in-out;
 	}
@@ -193,7 +193,7 @@ a {
 		margin: 0;
 		padding: 0;
 		list-style: none;
-		@include max-screen($grid) {
+		@include max-screen($tablet-max) {
 			flex-direction: column;
 			width: 100%;
 			text-align: center;
@@ -206,12 +206,12 @@ a {
 		&:last-child {
 			margin-right: 0;
 		}
-		@include max-screen($grid) {
+		@include max-screen($tablet-max) {
 			width: 100%;
 			margin-right: 0;
 			margin-bottom: 15px;
 		}
-		@include screen($tablet, $grid) {
+		@include screen($tablet, $tablet-max) {
 			width: auto;
 		}
 	}
@@ -267,7 +267,7 @@ a {
 		display: block;
 		width: 100%;
 		max-width: 94px;
-		@include max-screen($grid) {
+		@include max-screen($tablet-max) {
 			order: -1;
 			max-width: 150px;
 			margin-bottom: 50px;
@@ -284,7 +284,7 @@ a {
 	padding: 175px 0 380px;
 	background: $blackColor url("../img/backgrounds/hero_bg.jpg") no-repeat center;
 	background-size: cover;
-	@include max-screen($grid) {
+	@include max-screen($tablet-max) {
 		background: $blackColor url("../img/backgrounds/mobile/hero_bg.jpg") no-repeat center;
 		background-size: cover;
 	}
@@ -292,7 +292,7 @@ a {
 		margin-top: 47px;
 		padding: 85px 0 50px;
 	}
-	@include screen($tablet, $grid) {
+	@include screen($tablet, $tablet-max) {
 		margin-top: 55px;
 		padding: 175px 0;
 	}
@@ -306,7 +306,7 @@ a {
 		font-size: 22px;
 		font-weight: normal;
 		line-height: 32px;
-		@include max-screen($grid) {
+		@include max-screen($tablet-max) {
 			text-align: center;
 		}
 		@include max-screen($mobile) {
@@ -324,7 +324,7 @@ a {
 		position: relative;
 		display: flex;
 		align-items: center;
-		@include max-screen($grid) {
+		@include max-screen($tablet-max) {
 			flex-direction: column;
 		}
 	}
@@ -342,7 +342,7 @@ a {
 		font-weight: bold;
 		line-height: 17px;
 		text-transform: uppercase;
-		@include max-screen($grid) {
+		@include max-screen($tablet-max) {
 			order: -1;
 			margin: 15px 0;
 		}
@@ -356,7 +356,7 @@ a {
 	&__phones {
 		display: flex;
 		flex-direction: column;
-		@include max-screen($grid) {
+		@include max-screen($tablet-max) {
 			order: -2;
 		}
 	}
@@ -383,7 +383,7 @@ a {
 		@include max-screen($mobile) {
 			@include vis-hid;
 		}
-		@include screen($tablet, $grid) {
+		@include screen($tablet, $tablet-max) {
 			top: 170px;
 			left: 140px;
 		}
@@ -404,7 +404,7 @@ a {
 			font-weight: bold;
 			line-height: 1;
 			text-transform: uppercase;
-			@include max-screen($grid) {
+			@include max-screen($tablet-max) {
 				color: $whiteColor;
 			}
 
@@ -433,6 +433,9 @@ a {
 	display: flex;
 	@include max-screen($mobile) {
 		@include vis-hid;
+	}
+	@include screen($tablet, $tablet-max) {
+		margin: 0 -15px;
 	}
 }
 
@@ -786,7 +789,7 @@ a {
 		width: 1px;
 		height: 100%;
 		background-color: $highlightColor;
-		@include min-screen($grid) {
+		@include min-screen($tablet) {
 			@include vis-hid;
 		}
 	}
@@ -959,6 +962,10 @@ a {
 		@include max-screen($mobile) {
 			@include vis-hid;
 		}
+		@include screen($tablet, $tablet-max) {
+			font-size: 40px;
+			line-height: 48px;
+		}
 	}
 
 	&__subtitle {
@@ -1077,19 +1084,19 @@ a {
 
 	outline: 0;
 
-	&__img {
-		position: absolute;
-
-		&--ipad {
-			right: 0;
-			bottom: 0;
-		}
-
-		&--iphone {
-			right: 27%;
-			bottom: 0;
-		}
-	}
+	//&__img {
+	//	position: absolute;
+	//
+	//	&--ipad {
+	//		right: 0;
+	//		bottom: 0;
+	//	}
+	//
+	//	&--iphone {
+	//		right: 27%;
+	//		bottom: 0;
+	//	}
+	//}
 }
 
 // Mobile version
@@ -1101,7 +1108,7 @@ a {
 	font-weight: bold;
 	line-height: 32px;
 	text-align: center;
-	@include min-screen($grid) {
+	@include min-screen($tablet) {
 		@include vis-hid;
 	}
 
@@ -1112,7 +1119,7 @@ a {
 }
 
 .m-portfolio-slider {
-	@include min-screen($grid) {
+	@include min-screen($tablet) {
 		@include vis-hid;
 	}
 	.slick-dots {
@@ -1158,6 +1165,8 @@ a {
 	}
 
 	&__img {
+		max-width: 230px;
+		margin: 0 auto;
 		img {
 			margin: 0 auto;
 		}
@@ -1191,7 +1200,7 @@ a {
 		}
 
 		span {
-			color: $highlightColor;
+			color: $titleColor;
 			@include max-screen($mobile) {
 				display: block;
 			}
@@ -1299,7 +1308,6 @@ a {
 
 	&__descr {
 		margin: 0;
-
 		color: $whiteColor;
 		font-family: $juraFont;
 		font-size: 24px;
@@ -1307,6 +1315,10 @@ a {
 		line-height: 38px;
 		text-transform: uppercase;
 		text-align: center;
+		@include screen($tablet, $tablet-max) {
+			font-size: 20px;
+			line-height: 34px;
+		}
 	}
 }
 
@@ -1351,6 +1363,9 @@ a {
 	@include max-screen($mobile) {
 		@include vis-hid;
 	}
+	@include screen($tablet, $tablet-max) {
+		justify-content: center;
+	}
 }
 
 .pricing-box {
@@ -1376,6 +1391,9 @@ a {
 	//		margin-bottom: 0;
 	//	}
 	//}
+	@include screen($tablet, $tablet-max) {
+		margin: 0 30px 50px;
+	}
 
 	&--share {
 		position: relative;
@@ -1572,7 +1590,7 @@ a {
 
 // Mobile version
 .m-pricing-grid {
-	@include min-screen($grid) {
+	@include min-screen($tablet) {
 		@include vis-hid;
 	}
 }
@@ -1727,6 +1745,9 @@ a {
 		@include max-screen($mobile) {
 			@include vis-hid;
 		}
+		@include screen($tablet, $tablet-max) {
+			font-size: 25px;
+		}
 
 		span {
 			color: $highlightColor;
@@ -1777,7 +1798,7 @@ a {
 	line-height: 32px;
 	text-align: center;
 	text-transform: uppercase;
-	@include min-screen($grid) {
+	@include min-screen($tablet) {
 		@include vis-hid;
 	}
 
@@ -1858,6 +1879,9 @@ a {
 			max-width: 100%;
 			padding-bottom: 44px;
 		}
+		@include screen($tablet, $tablet-max) {
+			margin: 0 auto 50px;
+		}
 	}
 
 	&__icon {
@@ -1919,11 +1943,13 @@ a {
 		display: flex;
 		flex-wrap: wrap;
 		margin-bottom: 58px;
-
 		@include max-screen($mobile) {
 			flex-direction: column;
 			align-items: center;
 			margin-bottom: 40px;
+		}
+		@include screen($tablet, $tablet-max) {
+			margin-bottom: 20px;
 		}
 	}
 
@@ -1993,6 +2019,9 @@ a {
 			line-height: 22px;
 			text-align: center;
 		}
+		@include screen($tablet, $tablet-max) {
+			text-align: center;
+		}
 
 		p {
 			margin: 0;
@@ -2004,6 +2033,9 @@ a {
 		max-width: 460px;
 		margin: 0 auto;
 		overflow: hidden;
+		@include screen($tablet, $tablet-max) {
+			max-width: none;
+		}
 	}
 }
 
@@ -2013,6 +2045,11 @@ a {
 		margin: 0;
 		padding: 0;
 		border: none;
+		@include screen($tablet, $tablet-max) {
+			width: 100%;
+			max-width: 500px;
+			margin: 0 auto;
+		}
 	}
 
 	&__title {
@@ -2028,6 +2065,10 @@ a {
 		@include max-screen($mobile) {
 			text-align: center;
 		}
+		@include screen($tablet, $tablet-max) {
+			margin: 0 0 30px;
+			text-align: center;
+		}
 	}
 
 	&__control {
@@ -2040,10 +2081,15 @@ a {
 			max-width: 100%;
 			margin-bottom: 40px;
 		}
+		@include screen($tablet, $tablet-max) {
+			display: block;
+			max-width: none;
+			margin: 0 0 20px;
+		}
 
 		&--name {
 			margin-right: 15px;
-			@include max-screen($mobile) {
+			@include screen($mobile, $tablet-max) {
 				margin-right: 0;
 			}
 		}
@@ -2051,6 +2097,9 @@ a {
 		&--phone {
 			max-width: 100%;
 			margin: 30px 0;
+			@include screen($tablet, $tablet-max) {
+				margin: 0 0 20px;
+			}
 		}
 
 		&--textarea {
