--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1958,6 +1958,7 @@ a {
 		color: $titleColor;
 		font-size: 14px;
 		font-weight: 600;
+		transition: all 0.25s ease-in-out;
 
 		&:hover,
 		&:active,
@@ -2100,6 +2101,10 @@ a {
 			@include screen($tablet, $tablet-max) {
 				margin: 0 0 20px;
 			}
+
+			input {
+				letter-spacing: 0.025em;
+			}
 		}
 
 		&--textarea {
@@ -2132,13 +2137,11 @@ a {
 			display: block;
 			width: 100%;
 			padding: 12px 15px;
-
 			color: $titleColor;
 			font-family: $openSansFont;
 			font-size: 14px;
 			font-weight: 400;
 			line-height: 1.4;
-
 			border: 1px solid $grayColor;
 			border-radius: 0;
 			background-color: transparent;
