--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -7,10 +7,11 @@ $grayColor: #eee;
 $darkGrayColor: #7d7d7d;
 $highlightColor: #0093e5;
 $textColor: #7c7c7c;
+$textColor2: #393939;
 $titleColor: #4d4d4d;
 $borderColor1: #2cf7ec;
 $borderColor2: #3dbaff;
-$linearColor1: #3fadff;
+$linearColor1: #0ab2bc;
 $linearColor2: #30e5f0;
 
 // Fonts
