--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -63,16 +63,52 @@ a {
 	width: 100%;
 	max-width: 960px;
 	margin: 0 auto;
-	padding: 0 10px;
+	padding-left: 10px;
+	padding-right: 10px;
 
 	@include max-screen($tablet-max) {
 		padding: 0 15px;
 	}
 }
 
+.container-lg {
+	width: 100%;
+	max-width: 1170px;
+	margin: 0 auto;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
 .highlight-color {
 	color: $highlightColor;
 	font-weight: bold;
+}
+
+
+// *** BROWSER UPGRADE ***
+// =======================
+.browserupgrade {
+	position: relative;
+	z-index: 101;
+	margin: 0;
+	padding: 30px 0;
+
+	color: tomato;
+	font-family: $openSansFont;
+	font-size: 16px;
+	font-weight: 400;
+	text-align: center;
+	background-color: #fff;
+
+	a {
+		color: $highlightColor;
+		transition: all 0.25s ease-in-out;
+		&:hover,
+		&:active,
+		&.active {
+			color: $textColor;
+		}
+	}
 }
 
 
@@ -235,10 +271,10 @@ a {
 			left: 0;
 			bottom: 0;
 			display: block;
+			width: 0;
 			height: 3px;
 			background-color: transparent;
-			transition: all 0.25s ease-in-out;
-			transform: translateX(-100%);
+			transition: width 0.25s ease-in-out;
 			@include max-screen($mobile) {
 				@include vis-hid;
 			}
@@ -249,8 +285,8 @@ a {
 		&.mPS2id-highlight {
 			color: $highlightColor;
 			&::after {
+				width: 100%;
 				background-color: $highlightColor;
-				transform: translateX(0);
 			}
 			@include max-screen($mobile) {
 				color: $whiteColor;
@@ -296,8 +332,6 @@ a {
 		margin-top: 55px;
 		padding: 175px 0;
 	}
-
-	&__content {  }
 
 	&__descr {
 		margin-bottom: 25px;
@@ -445,92 +479,34 @@ a {
 	color: $whiteColor;
 	border-left: 1px solid rgba($borderColor1, 0.4);
 	transition: all 0.25s ease-in-out;
-	//@include max-screen($mobile) {
-	//	display: flex;
-	//	flex-direction: column;
-	//	align-items: center;
-	//	justify-content: center;
-	//	margin: 0 -15px;
-	//	padding: 40px 0 50px;
-	//	border-left: 0;
-	//	border-bottom: 1px solid rgba($borderColor1, 0.4);
-	//}
-
 	&:last-child {
 		border-right: 1px solid rgba($borderColor1, 0.4);
-		//@include max-screen($mobile) {
-		//	border-right: 0;
-		//}
 	}
 	&:hover {
 		color: $highlightColor;
+		border-color: transparent;
 		background-color: $whiteColor;
-		//@include max-screen($mobile) {
-		//	color: $whiteColor;
-		//	background-color: transparent;
-		//}
-
 		&:first-child {
 			box-shadow: -4px 4px 24px 0 rgba(0, 0, 0, 0.21);
-			//@include max-screen($mobile) {
-			//	box-shadow: none;
-			//}
 		}
 		&:nth-child(2) {
 			box-shadow: 0 5px 24px 0 rgba(0, 0, 0, 0.21);
-			//@include max-screen($mobile) {
-			//	box-shadow: none;
-			//}
 		}
 		&:last-child {
 			box-shadow: 4px 4px 24px 0 rgba(0, 0, 0, 0.21);
-			//@include max-screen($mobile) {
-			//	box-shadow: none;
-			//}
 		}
 
 		.services-item__icon svg {
 			fill: $highlightColor;
-			//@include max-screen($mobile) {
-			//	fill: $whiteColor;
-			//}
 		}
 	}
 
 	&__icon {
 		svg {
+			width: 71px;
+			height: 70px;
 			fill: $whiteColor;
 		}
-
-		&--1,
-		&--3 {
-			svg {
-				width: 71px;
-				height: 70px;
-			}
-		}
-
-		&--2 {
-			svg {
-				width: 78px;
-				height: 70px;
-			}
-		}
-	}
-
-	&__content {
-		//@include max-screen($mobile) {
-		//	width: 100%;
-		//	padding: 28px 40px 16px;
-		//	color: $titleColor;
-		//	background-color: $whiteColor;
-		//	//transform-origin: top;
-		//	//transform: scaleY(0);
-		//	transition: all 0.25s ease-in-out;
-		//	&.active {
-		//
-		//	}
-		//}
 	}
 
 	&__title {
@@ -539,11 +515,6 @@ a {
 		font-weight: bold;
 		line-height: 28px;
 		text-transform: uppercase;
-		//@include max-screen($mobile) {
-		//	margin: 7px 0 0;
-		//	font-size: 18px;
-		//	line-height: 24px;
-		//}
 	}
 
 	&__list {
@@ -559,7 +530,6 @@ a {
 			font-size: 14px;
 			font-weight: normal;
 			line-height: 24px;
-
 			&::after {
 				content: '-';
 				position: absolute;
@@ -2348,3 +2318,8 @@ a {
 		transform: scale(1);
 	}
 }
+
+
+// *** STYLES FOR ENGLISH ***
+// ==========================
+@import "styles-eng";
